# WeldSight-YOLO

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
test/: test_ai_reporting.py  test_data_management.py  test_inspection_store.py
ultralytics-main/: data.yaml  demo.py  test-mp4.py  test-v.py  test.py
ultralytics-main/runs - 副本/detect/train/: args.yaml
ultralytics-main/runs - 副本/detect/train2/: args.yaml
ultralytics-main/runs - 副本/detect/train3/: args.yaml
ultralytics-main/runs - 副本/detect/train4/: args.yaml
ultralytics-main/runs - 副本/detect/train5/: args.yaml
ultralytics-main/runs - 副本/detect/train6/: args.yaml  results.csv
ultralytics-main/runs - 副本/detect/train7/: args.yaml  results.csv
ultralytics-main/runs - 副本/detect/train8/: args.yaml
ultralytics-main/runs - 副本/detect/train9/: args.yaml
v-app/: run.py
v-app/app/: __init__.py  ai_reviewer.py  annotation_renderer.py  camera_handler.py  config.py  data_management.py  defect_classes.py  inference.py  inspection_service.py  inspection_store.py  model_manager.py  pdf_reports.py  reporting.py  video_processor.py
v-app/app/routes/: __init__.py  camera_routes.py  image_routes.py  inspection_routes.py  main_routes.py  video_routes.py
v-app/static/: app.css  batch.html  cam.html  dashboard.html  data.css  data.html  data.js  history.html  img.html  index.html  product.css  settings.html  style.css  ui.js  vid.html  workbench.css
v-app/uploads/: e2eSoft VCam.lnk
底片/: 咬边.rar
底片/welding_yolo/: data.yaml  train.py
