[project]
name = "weldsight-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "flask>=3.1.3",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "tqdm>=4.69.0",
    "ultralytics>=8.4.103",
]
