[project]
name = "weldsight-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ultralytics>=8.4.104",
    "torch",
    "torchvision",
    "torchaudio",
    "flask>=3.1.3",
    "pillow>=12.3.0",
    "reportlab>=5.0.0",
    "opencv-python>=5.0.0.93",
    "python-dotenv>=1.2.2",
    "openai>=2.47.0",
    "numpy>=2.5.1",
    "pymysql>=1.2.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
